fix: allow location label to wrap across lines

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -213,6 +213,7 @@ a {
     font-size: 0.82rem;
     font-weight: 500;
     line-height: 1.45;
+    white-space: normal;
 
     i {
       color: $muted-text-color;
